# Dockerized-Python-Runner

dockerproj/: Dockerfile  pyproject.toml
dockerproj/scripts/: install.sh  run.sh
dockerproj/src/: main.py
